{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 613,
  "lineage": "beefa2dd-53c2-05b3-fc7b-5a6a390ab31a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:903120719010:loadbalancer/app/digichlist-ALB/d2a27646b5cb8cc1",
            "arn_suffix": "app/digichlist-ALB/d2a27646b5cb8cc1",
            "dns_name": "digichlist-ALB-1461127304.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:903120719010:loadbalancer/app/digichlist-ALB/d2a27646b5cb8cc1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "digichlist-ALB",
            "security_groups": [
              "sg-0cb8047f30d2115a8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05c0940aa28d84adf"
              },
              {
                "subnet_id": "subnet-0f5f4bd3b4a03f52d"
              }
            ],
            "subnets": [
              "subnet-05c0940aa28d84adf",
              "subnet-0f5f4bd3b4a03f52d"
            ],
            "vpc_id": "vpc-01824aa6fd9dfb5b6",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.digichlist_alb",
            "aws_subnet.digichlist_public",
            "aws_subnet.digichlist_public_1b",
            "aws_vpc.digichlist_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_lb_listener_be",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:903120719010:listener/app/digichlist-ALB/d2a27646b5cb8cc1/07ce76d8fd437183",
            "certificate_arn": "arn:aws:acm:us-east-1:903120719010:certificate/64d5736e-9ca0-49fe-9650-0768ef1d5969",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:903120719010:targetgroup/target-group-be/d38e0ef708b5bcac",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:903120719010:listener/app/digichlist-ALB/d2a27646b5cb8cc1/07ce76d8fd437183",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:903120719010:loadbalancer/app/digichlist-ALB/d2a27646b5cb8cc1",
            "port": 5000,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_lb_listener_front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:903120719010:listener/app/digichlist-ALB/d2a27646b5cb8cc1/00fe0e0aefb01678",
            "certificate_arn": "arn:aws:acm:us-east-1:903120719010:certificate/64d5736e-9ca0-49fe-9650-0768ef1d5969",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:903120719010:targetgroup/target-group-fe/63d478b5acdc205d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:903120719010:listener/app/digichlist-ALB/d2a27646b5cb8cc1/00fe0e0aefb01678",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:903120719010:loadbalancer/app/digichlist-ALB/d2a27646b5cb8cc1",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_lb_listener_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:903120719010:listener/app/digichlist-ALB/d2a27646b5cb8cc1/bb6cf1b52354cd0e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:903120719010:listener/app/digichlist-ALB/d2a27646b5cb8cc1/bb6cf1b52354cd0e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:903120719010:loadbalancer/app/digichlist-ALB/d2a27646b5cb8cc1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_be",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:903120719010:targetgroup/target-group-be/d38e0ef708b5bcac",
            "arn_suffix": "targetgroup/target-group-be/d38e0ef708b5bcac",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/api-docs/",
                "port": "5000",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:903120719010:targetgroup/target-group-be/d38e0ef708b5bcac",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group-be",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01824aa6fd9dfb5b6"
          },
          "dependencies": [
            "aws_vpc.digichlist_VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_fe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:903120719010:targetgroup/target-group-fe/63d478b5acdc205d",
            "arn_suffix": "targetgroup/target-group-fe/63d478b5acdc205d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:903120719010:targetgroup/target-group-fe/63d478b5acdc205d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group-fe",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01824aa6fd9dfb5b6"
          },
          "dependencies": [
            "aws_vpc.digichlist_VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "digichlist_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:903120719010:security-group/sg-0cb8047f30d2115a8",
            "description": "Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb8047f30d2115a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "digichlist_lb",
            "name_prefix": "",
            "owner_id": "903120719010",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Digichlist-LB-Sec-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-01824aa6fd9dfb5b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.digichlist_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "digichlist_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:903120719010:subnet/subnet-05c0940aa28d84adf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/25",
            "id": "subnet-05c0940aa28d84adf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "903120719010",
            "tags": {
              "Access": "public",
              "Name": "digichlist subnet_public"
            },
            "tags_all": {
              "Access": "public",
              "Name": "digichlist subnet_public"
            },
            "vpc_id": "vpc-01824aa6fd9dfb5b6"
          },
          "dependencies": [
            "aws_vpc.digichlist_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "digichlist_public_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:903120719010:subnet/subnet-0f5f4bd3b4a03f52d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/25",
            "id": "subnet-0f5f4bd3b4a03f52d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "903120719010",
            "tags": {
              "Access": "public",
              "Name": "digichlist subnet_public_1b"
            },
            "tags_all": {
              "Access": "public",
              "Name": "digichlist subnet_public_1b"
            },
            "vpc_id": "vpc-01824aa6fd9dfb5b6"
          },
          "dependencies": [
            "aws_vpc.digichlist_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "digichlist_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:903120719010:vpc/vpc-01824aa6fd9dfb5b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/21",
            "default_network_acl_id": "acl-06638d6cbab0f0217",
            "default_route_table_id": "rtb-0bd6ea027c0bd9e54",
            "default_security_group_id": "sg-03a7380ac0f32dbdf",
            "dhcp_options_id": "dopt-d1183aab",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01824aa6fd9dfb5b6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bd6ea027c0bd9e54",
            "owner_id": "903120719010",
            "tags": {
              "Name": "digichlist VPC"
            },
            "tags_all": {
              "Name": "digichlist VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}